# PUC-GCES-PY

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
Sphinx/: conf.py
Sphinx/_build/html/: genindex.html  index.html  search.html  searchindex.js
Sphinx/_build/html/_sources/: index.rst.txt
poetry/: README.md  pyproject.toml
