[tool.poetry]
name = "PUC-GCES-PY"
version = "0.1.0"
description = ""
authors = ["Marcio Lucas <marciolucasmachado22@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_trabalho"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
